# actuarialpy

./: CHANGELOG.md  README.md  gitignore  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  _sample_data.py  credibility.py  development_uncertainty.py  experience_basics.py  per_line_development.py  renewal.py  reserving_ibnr.py  restatement.py  rolling_trend_monitor.py  seasonality.py  trend_and_forecast.py  trend_decomposition.py
src/actuarialpy/: __init__.py  adjustments.py  banding.py  claimants.py  columns.py  completion.py  components.py  credibility.py  decomposition.py  expected.py  experience.py  exposure.py  financial.py  forecast.py  frame.py  margins.py  metrics.py  persistency.py  reserving.py  rolling.py  seasonality.py  trend.py  validation.py  workbook.py
tests/: test_adjust.py  test_apply_completion.py  test_chainladder_equivalence.py  test_cohort_coverage.py  test_compare_actual_to_expected.py  test_credibility.py  test_credibility_limited_fluctuation.py  test_decomposition.py  test_develop_ultimate.py  test_experience_count_methods.py  test_experience_facade_extended.py  test_financial.py  test_financial_vectorization.py  test_fit_trend.py  test_frame.py  test_frame_and_date_ranges.py  test_frame_helpers.py  test_from_tables.py  test_lifecycle.py  test_mack.py  test_numeric_guards.py  test_persistency.py  test_properties.py  test_seasonality.py  test_student_t_ppf_exact.py  test_trend_compare.py  test_trend_compare_reporting.py  test_workbook.py
